// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AllIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 10H5c-1.103 0-2 .897-2 2v8c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-8c0-1.103-.897-2-2-2zM5 20v-8h14l.002 8H5zM5 6h14v2H5zm2-4h10v2H7z"
  />
</svg>
`;

exports[`should render AllIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 10H5c-1.103 0-2 .897-2 2v8c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-8c0-1.103-.897-2-2-2zM5 20v-8h14l.002 8H5zM5 6h14v2H5zm2-4h10v2H7z"
  />
</svg>
`;

exports[`should render AsteriskIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M478.21 334.093L336 256l142.21-78.093c11.795-6.477 15.961-21.384 9.232-33.037l-19.48-33.741c-6.728-11.653-21.72-15.499-33.227-8.523L296 186.718l3.475-162.204C299.763 11.061 288.937 0 275.48 0h-38.96c-13.456 0-24.283 11.061-23.994 24.514L216 186.718 77.265 102.607c-11.506-6.976-26.499-3.13-33.227 8.523l-19.48 33.741c-6.728 11.653-2.562 26.56 9.233 33.037L176 256 33.79 334.093c-11.795 6.477-15.961 21.384-9.232 33.037l19.48 33.741c6.728 11.653 21.721 15.499 33.227 8.523L216 325.282l-3.475 162.204C212.237 500.939 223.064 512 236.52 512h38.961c13.456 0 24.283-11.061 23.995-24.514L296 325.282l138.735 84.111c11.506 6.976 26.499 3.13 33.227-8.523l19.48-33.741c6.728-11.653 2.563-26.559-9.232-33.036z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render AsteriskIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 512 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M478.21 334.093L336 256l142.21-78.093c11.795-6.477 15.961-21.384 9.232-33.037l-19.48-33.741c-6.728-11.653-21.72-15.499-33.227-8.523L296 186.718l3.475-162.204C299.763 11.061 288.937 0 275.48 0h-38.96c-13.456 0-24.283 11.061-23.994 24.514L216 186.718 77.265 102.607c-11.506-6.976-26.499-3.13-33.227 8.523l-19.48 33.741c-6.728 11.653-2.562 26.56 9.233 33.037L176 256 33.79 334.093c-11.795 6.477-15.961 21.384-9.232 33.037l19.48 33.741c6.728 11.653 21.721 15.499 33.227 8.523L216 325.282l-3.475 162.204C212.237 500.939 223.064 512 236.52 512h38.961c13.456 0 24.283-11.061 23.995-24.514L296 325.282l138.735 84.111c11.506 6.976 26.499 3.13 33.227-8.523l19.48-33.741c6.728-11.653 2.563-26.559-9.232-33.036z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render CaretRightIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 192 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render CaretRightIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 192 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ChevronDownIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 448 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ChevronDownIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 448 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ChevronLeftIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 320 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ChevronLeftIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 320 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ChevronRightIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 320 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ChevronRightIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 320 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ChevronUpIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 448 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ChevronUpIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 448 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render CircleIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render CircleIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 512 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render CloseIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render CloseIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render DiscordIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 448 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M297.216 243.2c0 15.616-11.52 28.416-26.112 28.416-14.336 0-26.112-12.8-26.112-28.416s11.52-28.416 26.112-28.416c14.592 0 26.112 12.8 26.112 28.416zm-119.552-28.416c-14.592 0-26.112 12.8-26.112 28.416s11.776 28.416 26.112 28.416c14.592 0 26.112-12.8 26.112-28.416.256-15.616-11.52-28.416-26.112-28.416zM448 52.736V512c-64.494-56.994-43.868-38.128-118.784-107.776l13.568 47.36H52.48C23.552 451.584 0 428.032 0 398.848V52.736C0 23.552 23.552 0 52.48 0h343.04C424.448 0 448 23.552 448 52.736zm-72.96 242.688c0-82.432-36.864-149.248-36.864-149.248-36.864-27.648-71.936-26.88-71.936-26.88l-3.584 4.096c43.52 13.312 63.744 32.512 63.744 32.512-60.811-33.329-132.244-33.335-191.232-7.424-9.472 4.352-15.104 7.424-15.104 7.424s21.248-20.224 67.328-33.536l-2.56-3.072s-35.072-.768-71.936 26.88c0 0-36.864 66.816-36.864 149.248 0 0 21.504 37.12 78.08 38.912 0 0 9.472-11.52 17.152-21.248-32.512-9.728-44.8-30.208-44.8-30.208 3.766 2.636 9.976 6.053 10.496 6.4 43.21 24.198 104.588 32.126 159.744 8.96 8.96-3.328 18.944-8.192 29.44-15.104 0 0-12.8 20.992-46.336 30.464 7.68 9.728 16.896 20.736 16.896 20.736 56.576-1.792 78.336-38.912 78.336-38.912z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render DiscordIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 448 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M297.216 243.2c0 15.616-11.52 28.416-26.112 28.416-14.336 0-26.112-12.8-26.112-28.416s11.52-28.416 26.112-28.416c14.592 0 26.112 12.8 26.112 28.416zm-119.552-28.416c-14.592 0-26.112 12.8-26.112 28.416s11.776 28.416 26.112 28.416c14.592 0 26.112-12.8 26.112-28.416.256-15.616-11.52-28.416-26.112-28.416zM448 52.736V512c-64.494-56.994-43.868-38.128-118.784-107.776l13.568 47.36H52.48C23.552 451.584 0 428.032 0 398.848V52.736C0 23.552 23.552 0 52.48 0h343.04C424.448 0 448 23.552 448 52.736zm-72.96 242.688c0-82.432-36.864-149.248-36.864-149.248-36.864-27.648-71.936-26.88-71.936-26.88l-3.584 4.096c43.52 13.312 63.744 32.512 63.744 32.512-60.811-33.329-132.244-33.335-191.232-7.424-9.472 4.352-15.104 7.424-15.104 7.424s21.248-20.224 67.328-33.536l-2.56-3.072s-35.072-.768-71.936 26.88c0 0-36.864 66.816-36.864 149.248 0 0 21.504 37.12 78.08 38.912 0 0 9.472-11.52 17.152-21.248-32.512-9.728-44.8-30.208-44.8-30.208 3.766 2.636 9.976 6.053 10.496 6.4 43.21 24.198 104.588 32.126 159.744 8.96 8.96-3.328 18.944-8.192 29.44-15.104 0 0-12.8 20.992-46.336 30.464 7.68 9.728 16.896 20.736 16.896 20.736 56.576-1.792 78.336-38.912 78.336-38.912z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ExternalLinkIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="none"
  focusable="false"
  height="20"
  stroke="currentColor"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`should render ExternalLinkIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="none"
  focusable="false"
  height="50"
  stroke="currentColor"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`should render FilterIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render FilterIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render GitHubIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 496 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render GitHubIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 496 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render HelpIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
  />
  <path
    d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
  />
</svg>
`;

exports[`should render HelpIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
  />
  <path
    d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
  />
</svg>
`;

exports[`should render LeftArrowIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 320 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render LeftArrowIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 320 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render MarkerIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 384 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render MarkerIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 384 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render MediumIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M71.5 142.3c.6-5.9-1.7-11.8-6.1-15.8L20.3 72.1V64h140.2l108.4 237.7L364.2 64h133.7v8.1l-38.6 37c-3.3 2.5-5 6.7-4.3 10.8v272c-.7 4.1 1 8.3 4.3 10.8l37.7 37v8.1H307.3v-8.1l39.1-37.9c3.8-3.8 3.8-5 3.8-10.8V171.2L241.5 447.1h-14.7L100.4 171.2v184.9c-1.1 7.8 1.5 15.6 7 21.2l50.8 61.6v8.1h-144v-8L65 377.3c5.4-5.6 7.9-13.5 6.5-21.2V142.3z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render MediumIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 512 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M71.5 142.3c.6-5.9-1.7-11.8-6.1-15.8L20.3 72.1V64h140.2l108.4 237.7L364.2 64h133.7v8.1l-38.6 37c-3.3 2.5-5 6.7-4.3 10.8v272c-.7 4.1 1 8.3 4.3 10.8l37.7 37v8.1H307.3v-8.1l39.1-37.9c3.8-3.8 3.8-5 3.8-10.8V171.2L241.5 447.1h-14.7L100.4 171.2v184.9c-1.1 7.8 1.5 15.6 7 21.2l50.8 61.6v8.1h-144v-8L65 377.3c5.4-5.6 7.9-13.5 6.5-21.2V142.3z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render MenuIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 448 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render MenuIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 448 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render MoreIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
  />
</svg>
`;

exports[`should render MoreIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
  />
</svg>
`;

exports[`should render NotificationsIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 22c1.1 0 2-.9 2-2h-4a2 2 0 002 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
  />
</svg>
`;

exports[`should render NotificationsIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 22c1.1 0 2-.9 2-2h-4a2 2 0 002 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
  />
</svg>
`;

exports[`should render ResetIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M255.545 8c-66.269.119-126.438 26.233-170.86 68.685L48.971 40.971C33.851 25.851 8 36.559 8 57.941V192c0 13.255 10.745 24 24 24h134.059c21.382 0 32.09-25.851 16.971-40.971l-41.75-41.75c30.864-28.899 70.801-44.907 113.23-45.273 92.398-.798 170.283 73.977 169.484 169.442C423.236 348.009 349.816 424 256 424c-41.127 0-79.997-14.678-110.63-41.556-4.743-4.161-11.906-3.908-16.368.553L89.34 422.659c-4.872 4.872-4.631 12.815.482 17.433C133.798 479.813 192.074 504 256 504c136.966 0 247.999-111.033 248-247.998C504.001 119.193 392.354 7.755 255.545 8z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render ResetIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 512 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M255.545 8c-66.269.119-126.438 26.233-170.86 68.685L48.971 40.971C33.851 25.851 8 36.559 8 57.941V192c0 13.255 10.745 24 24 24h134.059c21.382 0 32.09-25.851 16.971-40.971l-41.75-41.75c30.864-28.899 70.801-44.907 113.23-45.273 92.398-.798 170.283 73.977 169.484 169.442C423.236 348.009 349.816 424 256 424c-41.127 0-79.997-14.678-110.63-41.556-4.743-4.161-11.906-3.908-16.368.553L89.34 422.659c-4.872 4.872-4.631 12.815.482 17.433C133.798 479.813 192.074 504 256 504c136.966 0 247.999-111.033 248-247.998C504.001 119.193 392.354 7.755 255.545 8z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render RightArrowIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 320 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render RightArrowIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 320 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render SearchIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render SearchIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 512 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render SettingsIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render SettingsIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 512 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render SquareIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 448 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render SquareIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 448 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render TimePeriodIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
  />
  <path
    d="M13 7h-2v6h6v-2h-4z"
  />
</svg>
`;

exports[`should render TimePeriodIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
  />
  <path
    d="M13 7h-2v6h6v-2h-4z"
  />
</svg>
`;

exports[`should render TrendingDownIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render TrendingDownIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render TrendingFlatIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M22 12l-4-4v3H3v2h15v3z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render TrendingFlatIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M22 12l-4-4v3H3v2h15v3z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render TrendingUpIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render TrendingUpIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`should render TwitterIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render TwitterIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm dVOzqR"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 512 512"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
    fill="currentColor"
  />
</svg>
`;

exports[`should render UnknownIcon icon at 20x20 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M2 22a8 8 0 1116 0H2zm8-9c-3.315 0-6-2.685-6-6s2.685-6 6-6 6 2.685 6 6-2.685 6-6 6zm7.363 2.233A7.505 7.505 0 0122.983 22H20c0-2.61-1-4.986-2.637-6.767zm-2.023-2.276A7.98 7.98 0 0018 7a7.964 7.964 0 00-1.015-3.903A5 5 0 0121 8a4.999 4.999 0 01-5.66 4.957z"
  />
</svg>
`;

exports[`should render UnknownIcon icon at 50x50 1`] = `
<svg
  aria-hidden="true"
  class="sc-AxjAm gXIMwt"
  fill="currentColor"
  focusable="false"
  height="50"
  viewBox="0 0 24 24"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M2 22a8 8 0 1116 0H2zm8-9c-3.315 0-6-2.685-6-6s2.685-6 6-6 6 2.685 6 6-2.685 6-6 6zm7.363 2.233A7.505 7.505 0 0122.983 22H20c0-2.61-1-4.986-2.637-6.767zm-2.023-2.276A7.98 7.98 0 0018 7a7.964 7.964 0 00-1.015-3.903A5 5 0 0121 8a4.999 4.999 0 01-5.66 4.957z"
  />
</svg>
`;
